--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,10 +10,16 @@ requires-python = ">=3.12"
 dependencies = [
     "pandas (>=2.2.3,<3.0.0)",
     "anndata (>=0.11.4,<0.12.0)",
-    "psutil (>=7.0.0,<8.0.0)"
+    "psutil (>=7.0.0,<8.0.0)",
+    "requests (>=2.32.3,<3.0.0)",
+    "tqdm (>=4.67.1,<5.0.0)"
 ]
 
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.3.5"
+
