--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ dependencies = [
     "anndata (>=0.11.4,<0.12.0)",
     "psutil (>=7.0.0,<8.0.0)",
     "requests (>=2.32.3,<3.0.0)",
-    "tqdm (>=4.67.1,<5.0.0)"
+    "tqdm (>=4.67.1,<5.0.0)",
 ]
 
 
