--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "psutil (>=7.0.0,<8.0.0)",
     "requests (>=2.32.3,<3.0.0)",
     "tqdm (>=4.67.1,<5.0.0)",
+    "dill (>=0.4.0,<0.5.0)",
 ]
 
 
