--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,24 +1,24 @@
-[tool.poetry]
-name = "datalair"
-version = "0.2.0"
-description = ""
-authors = ["Lukas Jonathan Haeuser <lhaeuser@ethz.ch>"]
-readme = "README.md"
-requires-python = ">=3.12"
-dependencies = [
-    "pandas (>=2.1.0,<3.0.0)",
-    "anndata (>=0.11.4,<0.13)",
-    "psutil (>=7.0.0,<8.0.0)",
-    "requests (>=2.32.3,<3.0.0)",
-    "tqdm (>=4.67.1,<5.0.0)",
-    "dill (>=0.4.0,<0.5.0)",
-]
-
-
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
 
-[tool.poetry.group.dev.dependencies]
-pytest = "^8.3.5"
+[project]
+name = "datalair"
+version = "0.2.0"
+description = ""
+readme = "README.md"
+requires-python = ">=3.12"
+authors = [
+    { name = "Lukas Jonathan Haeuser", email = "lhaeuser@ethz.ch" },
+]
+dependencies = [
+    "pandas>=2.1.0,<3.0.0",
+    "anndata>=0.11.4,<0.13",
+    "psutil>=7.0.0,<8.0.0",
+    "requests>=2.32.3,<3.0.0",
+    "tqdm>=4.67.1,<5.0.0",
+    "dill>=0.4.0,<0.5.0",
+]
 
+[project.optional-dependencies]
+dev = ["pytest>=8.3.5"]
