--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,3 +22,12 @@ dependencies = [
 
 [project.optional-dependencies]
 dev = ["pytest>=8.3.5"]
+
+[dependency-groups]
+dev = [
+    "mypy (>=1.18.2,<2.0.0)",
+    "types-psutil (>=7.0.0.20251001,<8.0.0.0)",
+    "types-requests (>=2.32.4.20250913,<3.0.0.0)",
+    "types-tqdm (>=4.67.0.20250809,<5.0.0.0)",
+    "pandas-stubs (>=2.3.2.250926,<3.0.0.0)"
+]
