--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,5 +29,19 @@ dev = [
     "types-psutil (>=7.0.0.20251001,<8.0.0.0)",
     "types-requests (>=2.32.4.20250913,<3.0.0.0)",
     "types-tqdm (>=4.67.0.20250809,<5.0.0.0)",
-    "pandas-stubs (>=2.3.2.250926,<3.0.0.0)"
+    "pandas-stubs (>=2.3.2.250926,<3.0.0.0)",
+    "ruff (>=0.14.0,<0.15.0)",
+    "pytest-cov (>=7.0.0,<8.0.0)"
 ]
+
+[tool.ruff]
+line-length = 100
+target-version = "py312"
+
+[tool.ruff.lint]
+select = ["E", "F", "I", "B"]
+ignore = ["E501"]
+
+[tool.ruff.format]
+quote-style = "double"
+indent-style = "space"
