--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,12 @@ dev = [
     "ruff (>=0.14.0,<0.15.0)",
     "pytest-cov (>=7.0.0,<8.0.0)"
 ]
+docs = [
+    "mkdocs (>=1.6.1,<2.0.0)",
+    "mkdocs-material (>=9.6.22,<10.0.0)",
+    "mkdocstrings (>=0.30.1,<0.31.0)",
+    "mkdocstrings-python (>=1.18.2,<2.0.0)"
+]
 
 [tool.ruff]
 line-length = 100
